--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
+    "@headlessui/vue": "^1.7.4",
     "@rushstack/eslint-patch": "^1.1.4",
     "@tailwindcss/forms": "^0.5.1",
     "@tailwindcss/line-clamp": "^0.4.0",
